Enable google analytics

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,15 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>Save File Converter</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DK6TDK3TP1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DK6TDK3TP1');
+    </script>
   </head>
   <body>
     <noscript>
