--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="robots" content="max-image-preview:none">
-    <meta name="description" content="Converts save files for retro consoles: MiSTer, GameShark (sps and gsv), PS1, N64, DexDrive, Action Replay, Retron 5, Wii Virtual Console, Sega CD, emulators, and various flash cartridge formats. Decrypts PSP saves. Provides help for downloading save files, erasing cartridge saves, and copying saves to and from original hardware." />
+    <meta name="description" content="Converts save files for retro consoles: MiSTer, GameShark (sps and gsv), PS1, N64, DexDrive, Action Replay, Retron 5, Wii Virtual Console, Sega CD, Nintendo Switch Online, emulators, and various flash cartridge formats. Decrypts PSP saves. Provides help for downloading save files, erasing cartridge saves, and copying saves to and from original hardware." />
     <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
